syntax = "proto3";

package api;

option go_package = "./api";

service User {
  rpc Create(CreateRequest) returns (UserResponse) {}
  rpc Users(Empty) returns (UsersResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}

message CreateRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message UsersResponse {
  repeated UserResponse users = 1;
}

message UserResponse {
  uint64 id = 1;
  string name = 2;
  string email = 3;
  string password = 4;
}

message DeleteRequest {
  uint64 id = 1;
}

message DeleteResponse {
  string message = 1;
}

message Empty {
}
